bk_ida/sjengida/g3/SwitchPromoted
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/SwitchPromoted/src/crazy.c:672:53: error: use of undeclared identifier 'xmmword_422500'
*( __m128i *)t = _mm_load_si128( ( const __m128i *)&xmmword_422500); 
                                                    ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/SwitchPromoted/src/crazy.c:673:57: error: use of undeclared identifier 'xmmword_422510'
*( __m128i *)&t[4] = _mm_load_si128( ( const __m128i *)&xmmword_422510); 
                                                        ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/SwitchPromoted/src/crazy.c:674:57: error: use of undeclared identifier 'xmmword_422520'
*( __m128i *)&t[8] = _mm_load_si128( ( const __m128i *)&xmmword_422520); 
                                                        ^
3 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/SwitchPromoted/src/obj/crazy.o] Error 1
